add pikle create method

--- a/notebooks/model_dev.ipynb
+++ b/notebooks/model_dev.ipynb
@@ -3173,11 +3173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7b04da4a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1afcd90b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(new_df.to_dict(),open('models/movie_dict.pkl','wb'))\n",
+    "pickle.dump(similarity,open('models/similarity.pkl','wb'))"
+   ]
   }
  ],
  "metadata": {
